# rarity-api

./: .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0f5129932561_.py  10e7a0467a14_.py  142f5848ac13_.py  276672e1ad4f_.py  27a36dc4239e_.py  2f69bf0d61ae_.py  39235afea0f0_.py  4099ac0050e8_.py  484b98b4c853_.py  4a6d6926c205_.py  7d550eda70b1_.py  a349cf3edee2_.py  afa0723a5491_.py  ec562f9984c4_.py  f4fa1af1040f_.py  fd6034876c7f_.py
certs/: jwt-private.pem  jwt-public.pem
src/: excel_parser.py  excel_parser_second.py  parse_locale.py  symbols_parser.py
src/excels/: symbol_index.txt
src/rarity_api/: database.py  main.py  models.py  settings.py
src/rarity_api/admin/: user_admin.py
src/rarity_api/auth/yandex/: router.py
src/rarity_api/common/: http_client.py  logger.py
src/rarity_api/common/auth/: dependencies.py  exceptions.py  router.py  utils.py
src/rarity_api/common/auth/google_auth/: dependencies.py  router.py
src/rarity_api/common/auth/models/: auth_credentials.py  token.py  user.py
src/rarity_api/common/auth/native_auth/: dependencies.py  router.py
src/rarity_api/common/auth/repositories/: auth_credentials_repository.py  token_repository.py  user_repository.py
src/rarity_api/core/database/: connector.py
src/rarity_api/core/helpers/: payment_configuration.py  payment_currencies.py  payment_endpoints.py  payment_prices.py
src/rarity_api/core/models/: models.py
src/rarity_api/endpoints/: archive_router.py  city_router.py  country_router.py  datas.py  item_router.py  item_router_old.py  manufacturer_router.py  payment_router.py  region_router.py  repos.py  search_history_router.py  user_router.py  verification_router.py
src/rarity_api/google_auth/: dependencies.py  router.py
src/rarity_api/google_auth/schemas/: oidc_user.py
src/rarity_api/google_auth/utils/: id_provider_certs.py
src/rarity_api/native_auth/: dependencies.py  router.py
src/rarity_api/native_auth/schemas/: token.py
src/rarity_api/native_auth/utils/: jwt_helpers.py  password_helpers.py
src/rarity_api/subs/: models.py  router.py  schemas.py  subscription_repository.py  tochka_client.py
src/rarity_api/utils/: generate_token.py
src/rarity_api/utils/smtp/: verify_sender.py
(+13 files in other folders)
