[project]
name = "rarity"
version = "0.1.0"
description = ""
authors = [
    {name = "w1tnessbtwwwwww",email = "work.w1tnessbtw@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.1,<2.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "stripe (>=12.2.0,<13.0.0)",
    "yookassa (>=3.5.0,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "sqladmin (>=0.20.1,<0.21.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "aiohttp (>=3.12.7,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
